syntax = "proto3";

package chatapp;

service ChatApp {
    rpc rpc_send_message(CMessage) returns (Response) {}
    rpc rpc_get_messages(User) returns (stream CMessage) {}
    rpc rpc_create_conversation(UserPair) returns (Group) {}
    rpc rpc_create_group(Group) returns (Group) {}
    rpc rpc_create_account(User) returns (User) {}
    rpc rpc_remove_account(User) returns (Response) {}
    rpc rpc_edit_group_name(Group) returns (Response) {}
    rpc rpc_remove_group_member(Group) returns (Response) {}
    rpc rpc_add_group_member(Group) returns (Response) {}
    rpc rpc_list_group_members(Group) returns (stream User) {}
    rpc rpc_list_groups(Pattern) returns (stream Group) {}
    rpc rpc_list_accounts(Pattern) returns (stream User) {}
}

message CMessage {
     int64 m_id = 1;
     int64 to_id = 2;
     string from_name = 3;
     string msg = 4;
}

message User {
     int64 u_id = 1;
     string username = 2;
     string password = 3;
     int64 checkpoint = 4;
}

message UserPair {
    string username1 = 1;
    string username2 = 2;
}

message Group {
     int64 g_id = 1;
     string g_name = 2;
     string edit_member_name = 3;
     string new_name = 4;
}

message Response {
     int32 errno = 1;
     string msg = 2;
}

message Pattern {
     string pattern = 1;
}
